--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Just Testing Live ......</h1>
+    <p>Button Testing for Navigation</p>
+    <a href="projects/cards-adventure/index.html"></a>
 </body>
 </html>
