Testing on how to link between github files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Just Testing Live ......</h1>
     <p>Button Testing for Navigation</p>
-    <a href="projects/cards-adventure/index.html"></a>
+    <a href="projects/cards-adventure/index.html">Some Project</a>
 </body>
 </html>
